# ckb-proxy-locks

contracts/always-success/: Cargo.toml
contracts/easy-to-discover-type/: Cargo.toml
contracts/easy-to-discover-type/src/: error.rs
contracts/input-type-proxy-lock/: Cargo.toml
contracts/input-type-proxy-lock/src/: error.rs
contracts/lock-proxy-lock/: Cargo.toml
contracts/lock-proxy-lock/src/: entry.rs  error.rs
contracts/output-type-proxy-lock/: Cargo.toml
contracts/single-use-lock/: Cargo.toml
contracts/single-use-lock/src/: error.rs
contracts/time-lock/: Makefile
contracts/type-burn-lock/: Cargo.toml
contracts/type-burn-lock/src/: error.rs
tests/: Cargo.toml
tests/src/: main.rs
tests/src/cells/: mod.rs
tests/src/tests/: mod.rs
