[package]
name = "tests"
version = "0.1.0"
edition = "2021"


[dependencies]
ckb-testtool = "0.13.1"
serde_json = "1.0"
bytes = "1.5.0"
serde = { version = "1.0.209", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]
ckb-std = { version = "0.16", git = "https://github.com/nervosnetwork/ckb-std.git" }
log = "0.4"
env_logger = "0.11"
walkdir = "2.4"

[dev-dependencies.serde_molecule]
version = "1.0.0"
git = "https://github.com/XuJiandong/serde_molecule.git"
rev = "07f145d"